--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,9 @@ img {
 /* MAIN CONTENT */
 main {
     min-height: 100vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
+    display: grid;
+    justify-content: center;
+    align-content: center;
 }
 
 /* CARDS */
@@ -131,4 +130,98 @@ footer {
     margin: auto;
     padding: 20px;
     text-align: center;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (min-width: 1440px) {
+    /* MAIN CONTENT */
+    main {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: minmax(350px, auto);
+        grid-gap: 40px;
+    }
+
+    /* CARDS */
+    .header {
+        grid-column: 2 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .card-red {
+        grid-column: 2 / 2;
+        grid-row: 2 / 2;
+    }
+
+    .card-orange {
+        grid-column: 2 / 2;
+        grid-row: 3 / 3;
+    }
+
+    .card-blue {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
+    .card-cyan {
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+        justify-self: end;
+        align-self: center;
+    }
+
+    .header {
+        width: 320px;
+        padding: 80px 0;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .header h1 {
+        color: var(--very-dark-blue);
+        font-size: 1.6rem;
+        font-weight: 200;
+        margin-bottom: 10px;
+    }
+
+    .header h2 {
+        color: var(--very-dark-blue);
+        font-size: 1.6rem;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+
+    .header p {
+        width: 100%;
+        color: var(--grayish-blue);
+        font-size: 0.99rem;
+        font-weight: 400;
+        line-height: 1.8;
+    }
+
+    .cards {
+        width: 320px;
+        border-radius: 5px;
+        box-shadow: 0 10px 10px 0 var(--grayish-blue);
+        padding: 30px;
+        margin-bottom: 30px;
+    }
+
+    .cards h3 {
+        color: var(--very-dark-blue);
+        font-size: 1.4rem;
+        font-weight: 600;
+        padding: 5px 0;
+    }
+
+    .cards p {
+        color: var(--grayish-blue);
+        font-size: 0.9rem;
+        font-weight: 4200;
+        line-height: 1.8;
+    }
+
+    .cards img {
+        float: right;
+        padding-top: 30px;
+    }
 }
