--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ html {
 }
 
 body {
+    min-height: 100vh;
+    background-color: var(--very-light-gray);
     font-family: "Poppins", sans-serif;
     font-size: 15px;
 }
@@ -60,49 +62,44 @@ img {
     border-top: solid var(--blue) 4px;
 }
 
-/* MAIN CONTENT */
-main {
-    min-height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-}
-
-/* CARD */
-.header {
-    width: 320px;
-    padding: 80px 0;
+/* HEADER */
+header {
+    width: 330px;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 80px auto;
 }
 
-.header h1 {
+header h1 {
     color: var(--very-dark-blue);
     font-size: 1.6rem;
     font-weight: 200;
+    line-height: 1.4;
     margin-bottom: 10px;
 }
 
-.header h2 {
+header span {
     color: var(--very-dark-blue);
     font-size: 1.6rem;
     font-weight: 600;
-    margin-bottom: 20px;
 }
 
-.header p {
+header p {
     width: 100%;
     color: var(--grayish-blue);
-    font-size: 0.99rem;
+    font-size: 0.98rem;
     font-weight: 400;
     line-height: 1.8;
+    margin-top: 10px;
 }
 
+/* CARDS */
 .cards {
-    width: 320px;
+    width: 330px;
+    height: 250px;
     border-radius: 5px;
-    box-shadow: 0 10px 20px 0 rgba(87, 61, 202, 0.226);
+    box-shadow: 0 10px 20px 0 rgba(97, 94, 107, 0.226);
     padding: 30px;
+    margin: auto;
     margin-bottom: 30px;
 }
 
@@ -125,90 +122,72 @@ main {
     padding-top: 30px;
 }
 
-/* FOOTER */
-footer {
-    width: 320px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
+.card-blue {
+    margin-bottom: 80px;
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 1100px) {
-    /* MAIN CONTENT */
-    main {
-        grid-template-columns: repeat(3, 400px);
-        grid-template-rows: repeat(3, 300px);
+@media only screen and (min-width: 1150px) {
+    /* HEADER */
+    header {
+        width: 600px;
+        text-align: center;
     }
 
-    /* CARD */
-    .header {
-        grid-column: 2 / 2;
-        grid-row: 1 / 2;
-        justify-self: center;
-        align-self: center;
-        width: 500px;
-        padding: 0;
-        margin-bottom: 0;
-    }
-
-    .header h1 {
+    header h1 {
         font-size: 2.5rem;
     }
 
-    .header h2 {
+    header span {
         font-size: 2.5rem;
     }
 
-    .header p {
+    header p {
         font-size: 1.05rem;
     }
 
+    /* CARDS */
+    main {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-gap: 40px;
+        grid-template-columns: repeat(3, 375px);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
     .cards {
-        width: 350px;
-        height: 250px;
-        margin-bottom: 0;
+        width: 375px;
+        height: 275px;
+        margin: 0;
     }
 
     .card-red {
-        grid-column: 2 / 2;
-        grid-row: 2 / 2;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
         justify-self: center;
         align-self: center;
     }
 
     .card-orange {
-        grid-column: 2 / 2;
-        grid-row: 3 / 3;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
         justify-self: center;
+        align-self: center;
+    }
+
+    .card-cyan {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+        justify-self: end;
         align-self: center;
     }
 
     .card-blue {
         grid-column: 3 / 4;
-        grid-row: 2 / 4;
+        grid-row: 1 / 3;
         justify-self: start;
         align-self: center;
-    }
-
-    .card-cyan {
-        grid-column: 1 / 1;
-        grid-row: 2 / 4;
-        justify-self: end;
-        align-self: center;
-    }
-
-    /* FOOTER */
-    a,
-    a:visited {
-        text-decoration: none;
-    }
-
-    footer a:nth-child(1) {
-        color: var(--cyan);
-    }
-
-    footer a:nth-child(2) {
-        color: var(--blue);
+        margin: 0;
     }
 }
