--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ img {
 header {
     width: 330px;
     text-align: center;
-    margin: 80px auto;
+    margin: auto;
+    padding: 80px 0;
 }
 
 header h1 {
@@ -74,7 +75,6 @@ header h1 {
     font-size: 1.6rem;
     font-weight: 200;
     line-height: 1.4;
-    margin-bottom: 10px;
 }
 
 header span {
@@ -89,18 +89,25 @@ header p {
     font-size: 0.98rem;
     font-weight: 400;
     line-height: 1.8;
-    margin-top: 10px;
+    padding: 20px;
 }
 
 /* CARDS */
+main {
+    margin-bottom: 80px;
+}
+
 .cards {
     width: 330px;
     height: 250px;
     border-radius: 5px;
     box-shadow: 0 10px 20px 0 rgba(97, 94, 107, 0.226);
     padding: 30px;
-    margin: auto;
-    margin-bottom: 30px;
+    margin: auto auto 25px auto;
+}
+
+main div:last-child {
+    margin-bottom: 0;
 }
 
 .cards h2 {
@@ -122,16 +129,11 @@ header p {
     padding-top: 30px;
 }
 
-.card-blue {
-    margin-bottom: 80px;
-}
-
 /* MEDIA QUERIES */
 @media only screen and (min-width: 1240px) {
     /* HEADER */
     header {
         width: 600px;
-        text-align: center;
     }
 
     header h1 {
@@ -166,7 +168,7 @@ header p {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
         justify-self: center;
-        align-self: center;
+        align-self: flex-end;
     }
 
     .card-orange {
@@ -174,7 +176,6 @@ header p {
         grid-row: 2 / 3;
         justify-self: center;
         align-self: center;
-        margin-bottom: 80px;
     }
 
     .card-cyan {
@@ -189,6 +190,5 @@ header p {
         grid-row: 1 / 3;
         justify-self: start;
         align-self: center;
-        margin: 0;
     }
 }
